...
    var body: some View {
        VStack {
            Text("Add task to \(getListName())")
                .font(.headline)

            TextField("Task name", text: $taskName)
                .accessibilityIdentifier("TaskName")

            TextField("Link", text: $link)
                .textContentType(.URL)
            
            HStack {
                if list != .today && list != .tomorrow {
...
                                switch dueType {
                                case .none:
                                    Image(systemName: "xmark.square")
                                    Text("None")
                                case .today:
                                    Image(systemName: "calendar")
                                    Text("Today")
                                case .tomorrow:
                                    Image(systemName: "sunrise")
                                    Text("Tomorrow")
                                case .nextweek:
                                    Image(systemName: "calendar.badge.clock")
                                    Text("Next week")
...
                            Text("Next week")
                        case .custom:
                            Image(systemName: "calendar")
                            Text("Custom")
                        }
                    }
                    .accessibilityIdentifier("DueDate")
                    
                    if dueDateType == .custom {
                        DatePicker("",
                                   selection: $dueDate,
                                   displayedComponents: .date)
                    }
...
                    save()
                    self.isVisible = false
                    presentationMode.wrappedValue.dismiss()
                }
                .keyboardShortcut(.defaultAction)
                .keyboardShortcut(.return)
                .accessibilityIdentifier("SaveTask")
            }
        }
        .frame(width: 400, height: 140)
        .padding()
    }

...
