...
    @State private var projectName = ""
    @State private var createSimpleList = false
    
    var body: some View {
        VStack {
            TextField("Project name", text: $projectName)
                .accessibilityIdentifier("ProjectNameField")
            
            Toggle(isOn: $createSimpleList) {
                Text("Create simple list")
            }
            .toggleStyle(.switch)
            .accessibility(identifier: "CreateSimpleList")
            
            HStack {
                Button("Cancel") {
                    self.isVisible = false
                }
                .keyboardShortcut(.cancelAction)
...
                            project.statuses?.append(status)
                        }
                    }
                }
                .keyboardShortcut(.defaultAction)
                .keyboardShortcut(.return)
                .accessibilityIdentifier("SaveProject")
            }
        }
        .frame(width: 400, height: 100)
        .padding()
    }
}
...
