...
            ToolbarItemGroup {
                Button {
                    newTaskIsShowing.toggle()
                } label: {
                    Label("Add task to current list", systemImage: "plus")
                }
                .accessibilityIdentifier("AddTaskToCurrentListButton")
                .help("Add task to current list ⌘⌥I")
                .keyboardShortcut("i", modifiers: [.command, .option])
#if os(iOS)
                .sheet(isPresented: $newTaskIsShowing, content: {
                    NewTaskView(isVisible: self.$newTaskIsShowing, list: .projects, project: project, mainTask: nil)
                        .presentationDetents([.height(220)])
...
                        ForEach(0...1, id: \.self) { mode in
                            HStack {
                                switch mode {
                                case 0:
                                    Image(systemName: "list.bullet")
                                case 1:
                                    Image(systemName: "rectangle.split.3x1")
                                default:
                                    EmptyView()
                                }
                            }
                            .tag(mode as Int)
                        }
...
