//
//  NewTaskView.swift
//  PomPadDoWatch Watch App
//
//  Created by Andrey Mikhaylin on 25.06.2024.
//

import SwiftUI
import SwiftData

struct NewTaskView: View {
    @Environment(\.modelContext) private var modelContext
    @Environment(\.presentationMode) var presentationMode
    @Environment(Refresher.self) var refresher
    @State private var taskName = ""
    @State private var dueToday = false
    
    var body: some View {
        NavigationStack {
            TextField("Add task to Inbox", text: $taskName)
                .onSubmit {
                    let task = Todo(name: taskName)
                    
                    if dueToday {
                        task.setDueDate(dueDate: Calendar.current.startOfDay(for: Date()))
                    }
                    
                    modelContext.insert(task)
                    presentationMode.wrappedValue.dismiss()
                }
                .accessibilityIdentifier("TaskName")
            
            Toggle("Due today", isOn: $dueToday)
                .toggleStyle(.switch)
                .accessibilityIdentifier("DueToday")
        }
    }
}

#Preview {
    NewTaskView()
}
