...
                    Button {
                        timer.start()
                    } label: {
                        Image(systemName: "play.fill")
                    }
                    .padding()
                    .accessibility(identifier: "StartTimerButton")
                }
                // resume
                if timer.state == .paused {
                    Button {
                        timer.resume()
                    } label: {
...
